// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redeem Yield should render Redeem Yield Screen 1`] = `
<div>
  <div
    data-rk=""
  >
    <style>
      [data-rk]{--rk-blurs-modalOverlay:blur(0px);--rk-fonts-body:SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";--rk-radii-actionButton:9999px;--rk-radii-connectButton:12px;--rk-radii-menuButton:12px;--rk-radii-modal:24px;--rk-radii-modalMobile:28px;--rk-colors-accentColor:#0E76FD;--rk-colors-accentColorForeground:#FFF;--rk-colors-actionButtonBorder:rgba(0, 0, 0, 0.04);--rk-colors-actionButtonBorderMobile:rgba(0, 0, 0, 0.06);--rk-colors-actionButtonSecondaryBackground:rgba(0, 0, 0, 0.06);--rk-colors-closeButton:rgba(60, 66, 66, 0.8);--rk-colors-closeButtonBackground:rgba(0, 0, 0, 0.06);--rk-colors-connectButtonBackground:#FFF;--rk-colors-connectButtonBackgroundError:#FF494A;--rk-colors-connectButtonInnerBackground:linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.06));--rk-colors-connectButtonText:#25292E;--rk-colors-connectButtonTextError:#FFF;--rk-colors-connectionIndicator:#30E000;--rk-colors-error:#FF494A;--rk-colors-generalBorder:rgba(0, 0, 0, 0.06);--rk-colors-generalBorderDim:rgba(0, 0, 0, 0.03);--rk-colors-menuItemBackground:rgba(60, 66, 66, 0.1);--rk-colors-modalBackdrop:rgba(0, 0, 0, 0.3);--rk-colors-modalBackground:#FFF;--rk-colors-modalBorder:transparent;--rk-colors-modalText:#25292E;--rk-colors-modalTextDim:rgba(60, 66, 66, 0.3);--rk-colors-modalTextSecondary:rgba(60, 66, 66, 0.6);--rk-colors-profileAction:#FFF;--rk-colors-profileActionHover:rgba(255, 255, 255, 0.5);--rk-colors-profileForeground:rgba(60, 66, 66, 0.06);--rk-colors-selectedOptionBorder:rgba(60, 66, 66, 0.1);--rk-colors-standby:#FFD641;--rk-shadows-connectButton:0px 4px 12px rgba(0, 0, 0, 0.1);--rk-shadows-dialog:0px 8px 32px rgba(0, 0, 0, 0.32);--rk-shadows-profileDetailsAction:0px 2px 6px rgba(37, 41, 46, 0.04);--rk-shadows-selectedOption:0px 2px 6px rgba(0, 0, 0, 0.24);--rk-shadows-selectedWallet:0px 2px 6px rgba(0, 0, 0, 0.12);--rk-shadows-walletLogo:0px 2px 16px rgba(0, 0, 0, 0.16);}
    </style>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-ad7hj2-MuiTypography-root"
          data-testid="redeemable-balance"
        >
          100
           sOHM
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
        >
          Redeemable Yield
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-t0g9ur-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-root  css-e1do9p-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Redeem Yield
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="grey-box  MuiBox-root css-h33641"
        >
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Deposited sOHM
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              1,000 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Redeemable Amount
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              100 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Your Next Rebase
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              2.1469 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Next Rebase Yield
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              0.2146%
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Rebases (5-Day Rate)
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              3.2692%
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Redeem Yield should show extra content if project wallet 1`] = `
<div>
  <div
    data-rk=""
  >
    <style>
      [data-rk]{--rk-blurs-modalOverlay:blur(0px);--rk-fonts-body:SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";--rk-radii-actionButton:9999px;--rk-radii-connectButton:12px;--rk-radii-menuButton:12px;--rk-radii-modal:24px;--rk-radii-modalMobile:28px;--rk-colors-accentColor:#0E76FD;--rk-colors-accentColorForeground:#FFF;--rk-colors-actionButtonBorder:rgba(0, 0, 0, 0.04);--rk-colors-actionButtonBorderMobile:rgba(0, 0, 0, 0.06);--rk-colors-actionButtonSecondaryBackground:rgba(0, 0, 0, 0.06);--rk-colors-closeButton:rgba(60, 66, 66, 0.8);--rk-colors-closeButtonBackground:rgba(0, 0, 0, 0.06);--rk-colors-connectButtonBackground:#FFF;--rk-colors-connectButtonBackgroundError:#FF494A;--rk-colors-connectButtonInnerBackground:linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.06));--rk-colors-connectButtonText:#25292E;--rk-colors-connectButtonTextError:#FFF;--rk-colors-connectionIndicator:#30E000;--rk-colors-error:#FF494A;--rk-colors-generalBorder:rgba(0, 0, 0, 0.06);--rk-colors-generalBorderDim:rgba(0, 0, 0, 0.03);--rk-colors-menuItemBackground:rgba(60, 66, 66, 0.1);--rk-colors-modalBackdrop:rgba(0, 0, 0, 0.3);--rk-colors-modalBackground:#FFF;--rk-colors-modalBorder:transparent;--rk-colors-modalText:#25292E;--rk-colors-modalTextDim:rgba(60, 66, 66, 0.3);--rk-colors-modalTextSecondary:rgba(60, 66, 66, 0.6);--rk-colors-profileAction:#FFF;--rk-colors-profileActionHover:rgba(255, 255, 255, 0.5);--rk-colors-profileForeground:rgba(60, 66, 66, 0.06);--rk-colors-selectedOptionBorder:rgba(60, 66, 66, 0.1);--rk-colors-standby:#FFD641;--rk-shadows-connectButton:0px 4px 12px rgba(0, 0, 0, 0.1);--rk-shadows-dialog:0px 8px 32px rgba(0, 0, 0, 0.32);--rk-shadows-profileDetailsAction:0px 2px 6px rgba(37, 41, 46, 0.04);--rk-shadows-selectedOption:0px 2px 6px rgba(0, 0, 0, 0.24);--rk-shadows-selectedWallet:0px 2px 6px rgba(0, 0, 0, 0.12);--rk-shadows-walletLogo:0px 2px 16px rgba(0, 0, 0, 0.16);}
    </style>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-ad7hj2-MuiTypography-root"
          data-testid="redeemable-balance"
        >
          100
           sOHM
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
        >
          Redeemable Yield
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-t0g9ur-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-root  css-e1do9p-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Redeem Yield
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
          >
            <div
              class="grey-box  MuiBox-root css-h33641"
            >
              <h3
                class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-1a5bnby-MuiTypography-root"
              >
                200
              </h3>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
              >
                sOHM Goal
              </p>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
          >
            <div
              class="grey-box  MuiBox-root css-h33641"
            >
              <h3
                class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-1a5bnby-MuiTypography-root"
                data-testid="project-deposit"
              >
                1,000
              </h3>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
              >
                Total sOHM Donated
              </p>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
          >
            <div
              class="grey-box  MuiBox-root css-h33641"
            >
              <h3
                class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-1a5bnby-MuiTypography-root"
                data-testid="project-goal-achievement"
              >
                500
                %
              </h3>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
              >
                of sOHM Goal
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="grey-box  MuiBox-root css-h33641"
        >
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Deposited sOHM
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              1,000 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Redeemable Amount
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              100 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Your Next Rebase
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              2.1469 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Next Rebase Yield
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              0.2146%
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Rebases (5-Day Rate)
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              3.2692%
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Redeem Yield should show redeemable balance as 100 sOHM 1`] = `
<div>
  <div
    data-rk=""
  >
    <style>
      [data-rk]{--rk-blurs-modalOverlay:blur(0px);--rk-fonts-body:SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";--rk-radii-actionButton:9999px;--rk-radii-connectButton:12px;--rk-radii-menuButton:12px;--rk-radii-modal:24px;--rk-radii-modalMobile:28px;--rk-colors-accentColor:#0E76FD;--rk-colors-accentColorForeground:#FFF;--rk-colors-actionButtonBorder:rgba(0, 0, 0, 0.04);--rk-colors-actionButtonBorderMobile:rgba(0, 0, 0, 0.06);--rk-colors-actionButtonSecondaryBackground:rgba(0, 0, 0, 0.06);--rk-colors-closeButton:rgba(60, 66, 66, 0.8);--rk-colors-closeButtonBackground:rgba(0, 0, 0, 0.06);--rk-colors-connectButtonBackground:#FFF;--rk-colors-connectButtonBackgroundError:#FF494A;--rk-colors-connectButtonInnerBackground:linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.06));--rk-colors-connectButtonText:#25292E;--rk-colors-connectButtonTextError:#FFF;--rk-colors-connectionIndicator:#30E000;--rk-colors-error:#FF494A;--rk-colors-generalBorder:rgba(0, 0, 0, 0.06);--rk-colors-generalBorderDim:rgba(0, 0, 0, 0.03);--rk-colors-menuItemBackground:rgba(60, 66, 66, 0.1);--rk-colors-modalBackdrop:rgba(0, 0, 0, 0.3);--rk-colors-modalBackground:#FFF;--rk-colors-modalBorder:transparent;--rk-colors-modalText:#25292E;--rk-colors-modalTextDim:rgba(60, 66, 66, 0.3);--rk-colors-modalTextSecondary:rgba(60, 66, 66, 0.6);--rk-colors-profileAction:#FFF;--rk-colors-profileActionHover:rgba(255, 255, 255, 0.5);--rk-colors-profileForeground:rgba(60, 66, 66, 0.06);--rk-colors-selectedOptionBorder:rgba(60, 66, 66, 0.1);--rk-colors-standby:#FFD641;--rk-shadows-connectButton:0px 4px 12px rgba(0, 0, 0, 0.1);--rk-shadows-dialog:0px 8px 32px rgba(0, 0, 0, 0.32);--rk-shadows-profileDetailsAction:0px 2px 6px rgba(37, 41, 46, 0.04);--rk-shadows-selectedOption:0px 2px 6px rgba(0, 0, 0, 0.24);--rk-shadows-selectedWallet:0px 2px 6px rgba(0, 0, 0, 0.12);--rk-shadows-walletLogo:0px 2px 16px rgba(0, 0, 0, 0.16);}
    </style>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-ad7hj2-MuiTypography-root"
          data-testid="redeemable-balance"
        >
          100
           sOHM
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
        >
          Redeemable Yield
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-t0g9ur-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-root  css-e1do9p-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Redeem Yield
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="grey-box  MuiBox-root css-h33641"
        >
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Deposited sOHM
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              1,000 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Redeemable Amount
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              100 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Your Next Rebase
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              2.1469 sOHM
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Next Rebase Yield
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              0.2146%
            </p>
          </div>
          <div
            class="DataRow-root data-row css-19fvmib"
          >
            <div
              class="MuiBox-root css-1xhj18k"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              >
                Rebases (5-Day Rate)
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
              style="text-align: right;"
            >
              3.2692%
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;
